// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Clickable /> when ariaLabel is passed matches its snapshot 1`] = `
<button
  aria-label="aria label content"
  className=
      y-clickable
      {
        background: none;
        border: none;
        color: inherit;
        cursor: pointer;
        display: inline;
        font: inherit;
        line-height: inherit;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        overflow: visible;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: inherit;
        width: undefined;
      }
      & > .y-block {
        width: 100%;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  type="button"
>
  <span
    className=
        y-fakeLink
        {
          color: #386cbb;
          text-decoration: none;
        }
        &:hover {
          cursor: pointer;
          text-decoration: underline;
        }
        &:active, &:focus, &:hover {
          color: #264f8c;
        }
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> when block is true matches its snapshot 1`] = `
<button
  className=
      y-clickable
      {
        background: none;
        border: none;
        color: inherit;
        cursor: pointer;
        display: block;
        font: inherit;
        line-height: inherit;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        overflow: visible;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: inherit;
        width: 100%;
      }
      & > .y-block {
        width: 100%;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  type="button"
>
  <span
    className=
        y-fakeLink
        {
          color: #386cbb;
          text-decoration: none;
        }
        &:hover {
          cursor: pointer;
          text-decoration: underline;
        }
        &:active, &:focus, &:hover {
          color: #264f8c;
        }
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> when focusableRef is passed matches its snapshot 1`] = `
<button
  class=
      y-clickable
      {
        background: none;
        border: none;
        color: inherit;
        cursor: pointer;
        display: inline;
        font: inherit;
        line-height: inherit;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        overflow: visible;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: inherit;
        width: undefined;
      }
      & > .y-block {
        width: 100%;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  type="button"
>
  <span
    class=
        y-fakeLink
        {
          color: #386cbb;
          text-decoration: none;
        }
        &:hover {
          cursor: pointer;
          text-decoration: underline;
        }
        &:active, &:focus, &:hover {
          color: #264f8c;
        }
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> when title is passed matches its snapshot 1`] = `
<button
  className=
      y-clickable
      {
        background: none;
        border: none;
        color: inherit;
        cursor: pointer;
        display: inline;
        font: inherit;
        line-height: inherit;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        overflow: visible;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: inherit;
        width: undefined;
      }
      & > .y-block {
        width: 100%;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  title="extra browser tooltip content"
  type="button"
>
  <span
    className=
        y-fakeLink
        {
          color: #386cbb;
          text-decoration: none;
        }
        &:hover {
          cursor: pointer;
          text-decoration: underline;
        }
        &:active, &:focus, &:hover {
          color: #264f8c;
        }
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> when unstyled matches its snapshot 1`] = `
<button
  className=
      y-clickable
      {
        background: none;
        border: none;
        color: inherit;
        cursor: pointer;
        display: inline;
        font: inherit;
        line-height: inherit;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        overflow: visible;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: inherit;
        width: undefined;
      }
      & > .y-block {
        width: 100%;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  type="button"
>
  clickable content
</button>
`;

exports[`<Clickable /> with additional className matches its snapshot 1`] = `
<button
  className=
      y-clickable
      TEST_CLASSNAME
      {
        background: none;
        border: none;
        color: inherit;
        cursor: pointer;
        display: inline;
        font: inherit;
        line-height: inherit;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        overflow: visible;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: inherit;
        width: undefined;
      }
      & > .y-block {
        width: 100%;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  type="button"
>
  <span
    className=
        y-fakeLink
        {
          color: #386cbb;
          text-decoration: none;
        }
        &:hover {
          cursor: pointer;
          text-decoration: underline;
        }
        &:active, &:focus, &:hover {
          color: #264f8c;
        }
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> with default options matches its snapshot 1`] = `
<button
  className=
      y-clickable
      {
        background: none;
        border: none;
        color: inherit;
        cursor: pointer;
        display: inline;
        font: inherit;
        line-height: inherit;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        overflow: visible;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: inherit;
        width: undefined;
      }
      & > .y-block {
        width: 100%;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #264f8c;
        cursor: pointer;
        text-decoration: underline;
      }
  type="button"
>
  <span
    className=
        y-fakeLink
        {
          color: #386cbb;
          text-decoration: none;
        }
        &:hover {
          cursor: pointer;
          text-decoration: underline;
        }
        &:active, &:focus, &:hover {
          color: #264f8c;
        }
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> with theme matches its snapshot 1`] = `
<button
  className=
      y-clickable
      {
        background: none;
        border: none;
        color: inherit;
        cursor: pointer;
        display: inline;
        font: inherit;
        line-height: inherit;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        overflow: visible;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: inherit;
        width: undefined;
      }
      & > .y-block {
        width: 100%;
      }
      &:active .y-fakeLink, &:focus .y-fakeLink, &:hover .y-fakeLink {
        color: #e9eff8;
        cursor: pointer;
        text-decoration: underline;
      }
  type="button"
>
  <span
    className=
        y-fakeLink
        {
          color: #386cbb;
          text-decoration: none;
        }
        &:hover {
          cursor: pointer;
          text-decoration: underline;
        }
        &:active, &:focus, &:hover {
          color: #264f8c;
        }
  >
    clickable content
  </span>
</button>
`;
